# QS1

./: .readthedoc.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
assignments/: Untitled.ipynb  Untitled1.ipynb  bitstring_class.ipynb  bitstring_class.py  graph_energy.ipynb  ising_ensemble_avg.ipynb  ising_ensemble_avg_package.ipynb  monte_carlo.ipynb  python_basics.html
assignments/.ipynb_checkpoints/: bitstring_class-Copy1-checkpoint.ipynb  bitstring_class-checkpoint.ipynb  graph_energy-checkpoint.ipynb  isingHamiltonian-checkpoint.ipynb  ising_ensemble_avg-Copy1-checkpoint.ipynb  ising_ensemble_avg-checkpoint.ipynb  ising_ensemble_avg_package-checkpoint.ipynb
assignments/montecarlo/montecarlo/: isingHamiltonian.py
docs/: conf.py
montecarlo/docs/: conf.py  requirements.txt
montecarlo/montecarlo/: __init__.py  bitString.py  isingHamiltonian.py
montecarloPackage/: CODE_OF_CONDUCT.md  LICENSE  README.md  _version.py  pyproject.toml  requirements.txt  setup.py
montecarloPackage/.github/workflows/: CI.yaml
montecarloPackage/docs/: README.md  about.rst  api.rst  getting_started.rst  index.rst  requirements.yaml
montecarloPackage/docs/autosummary/: montecarlo.bitString.rst
montecarloPackage/docs/testenv/: pyvenv.cfg
montecarloPackage/montecarlo/: __init__.py  bitString.py  isingHamiltonian.py
